--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -25,3 +25,4 @@ nav:
           - Layered Architecture:
               - Overview: ddd-reference/layered-architecture/overview.md
       - III. Supple Design: ddd-reference/03-supple-design.md
+      - IV. Context Mapping for Strategic Design: ddd-reference/04-context-mapping-for-strategic-design.md
